syntax = "proto3";

package order;

option go_package = "mebellar-backend/pkg/pb;pb";

import "google/protobuf/timestamp.proto";
import "common.proto";

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_NEW = 1;
  ORDER_STATUS_CONFIRMED = 2;
  ORDER_STATUS_SHIPPING = 3;
  ORDER_STATUS_COMPLETED = 4;
  ORDER_STATUS_CANCELLED = 5;
}

enum OrderEventType {
  ORDER_EVENT_TYPE_UNSPECIFIED = 0;
  ORDER_EVENT_TYPE_CREATED = 1;
  ORDER_EVENT_TYPE_UPDATED = 2;
  ORDER_EVENT_TYPE_STATUS_CHANGED = 3;
  ORDER_EVENT_TYPE_DELETED = 4;
}

message OrderItem {
  string id = 1;
  string order_id = 2;
  string product_id = 3;
  string product_name = 4;
  string product_image = 5;
  int32 quantity = 6;
  double price = 7;
  google.protobuf.Timestamp created_at = 8;
}

message Order {
  string id = 1;
  string shop_id = 2;
  string shop_name = 3;
  string client_name = 4;
  string client_phone = 5;
  string client_address = 6;
  double total_amount = 7;
  double delivery_price = 8;
  OrderStatus status = 9;
  string client_note = 10;
  string seller_note = 11;
  repeated OrderItem items = 12;
  int32 items_count = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
  google.protobuf.Timestamp completed_at = 16;
}

message OrderItemInput {
  string product_id = 1;
  string product_name = 2;
  string product_image = 3;
  int32 quantity = 4;
  double price = 5;
}

message CreateOrderRequest {
  string shop_id = 1;
  string client_name = 2;
  string client_phone = 3;
  string client_address = 4;
  double total_amount = 5;
  double delivery_price = 6;
  string client_note = 7;
  repeated OrderItemInput items = 8;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateOrderStatusRequest {
  string id = 1;
  OrderStatus status = 2;
  string seller_note = 3;
}

message DeleteOrderRequest {
  string id = 1;
}

message ListOrdersRequest {
  string shop_id = 1;
  repeated OrderStatus statuses = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message OrderResponse {
  Order order = 1;
}

message StreamOrdersRequest {
  string shop_id = 1;
  repeated OrderStatus statuses = 2;
}

message OrderEvent {
  OrderEventType type = 1;
  Order order = 2;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (common.Empty);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc StreamOrders(StreamOrdersRequest) returns (stream OrderEvent);
}
